# aioconpty

./: README.md  async_conpty.py  main.py  pyproject.toml
src/aioconpty/: __init__.py  conpty.py
