[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aioconpty"
version = "0.1.0"
description = "Asyncio-friendly wrapper around the Windows ConPTY API"
readme = "README.md"
authors = [
    { name = "Unknown" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["windows", "asyncio", "conpty", "terminal", "pty"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]

[project.urls]
"Homepage" = "https://github.com/unknown/aioconpty"
"Source" = "https://github.com/unknown/aioconpty"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
